--- a/api/package.json
+++ b/api/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "tsc --watch & nodemon server.js",
-    "start": "node dist/server.js",
+    "dev": "tsc --watch & nodemon src/server.ts",
+    "start": "node dist/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
   },
   "dependencies": {
