--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "tsc --watch & nodemon src/server.ts",
     "start": "node dist/src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
